portfolio/programming/CPP/workspace_all/.metadata/.plugins/org.eclipse.cdt.ui/ex.5-11.build.log
15:15:11 **** Build of configuration Debug for project ex.5-11 ****
Info: Configuration "Debug" uses tool-chain "Cygwin GCC" that is unsupported on this system, attempting to build anyway.
make all 
Building file: ../ex.5-11.cpp
Invoking: Cygwin C++ Compiler
g++ -O0 -g3 -Wall -c -fmessage-length=0 -MMD -MP -MF"ex.5-11.d" -MT"ex.5-11.o" -o "ex.5-11.o" "../ex.5-11.cpp"
../ex.5-11.cpp:19:3: error: use of undeclared identifier 'cout'; did you mean 'count'?
                cout << p[i] <<" ";
                ^~~~
                count
/Library/Developer/CommandLineTools/usr/include/c++/v1/algorithm:1244:1: note: 'count' declared here
count(_InputIterator __first, _InputIterator __last, const _Tp& __value_)
^
../ex.5-11.cpp:19:3: error: reference to overloaded function could not be resolved; did you mean to call it?
                cout << p[i] <<" ";
                ^~~~
/Library/Developer/CommandLineTools/usr/include/c++/v1/algorithm:1244:1: note: possible target for call
count(_InputIterator __first, _InputIterator __last, const _Tp& __value_)
^
../ex.5-11.cpp:20:3: error: use of undeclared identifier 'cout'; did you mean 'count'?
                cout << *(ary+1) << endl;
                ^~~~
                count
/Library/Developer/CommandLineTools/usr/include/c++/v1/algorithm:1244:1: note: 'count' declared here
count(_InputIterator __first, _InputIterator __last, const _Tp& __value_)
^
../ex.5-11.cpp:20:3: error: reference to overloaded function could not be resolved; did you mean to call it?
                cout << *(ary+1) << endl;
                ^~~~
/Library/Developer/CommandLineTools/usr/include/c++/v1/algorithm:1244:1: note: possible target for call
count(_InputIterator __first, _InputIterator __last, const _Tp& __value_)
^
4 errors generated.
make: *** [ex.5-11.o] Error 1
"make all" terminated with exit code 2. Build might be incomplete.

15:15:12 Build Failed. 5 errors, 0 warnings. (took 836ms)

